--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Amityville Horror House</title>
-<link rel="stylesheet" href="./css/HTMLAUTHORING_Ferrari_4.css">
+<link rel="stylesheet" href="./ahh.css">
 </head>
 <body>
     <article>
